--- a/conf/krb5.conf
+++ b/conf/krb5.conf
@@ -40,10 +40,10 @@
 [realms]
 	PTI.INTRA = {
 		# Servidor de geração de KDC
-		kdc = ptispo01dc01.pti.intra
+		kdc = srvdc01.pti.intra
 		#
 		# Servidor de Administração do KDC
-		admin_server = ptispo01dc01.pti.intra
+		admin_server = srvdc01.pti.intra
 		#
 		# Domínio padrão
 		default_domain = pti.intra
